    hook predicates to the Logtalk compiler in order to simplify handling
    of proprietary directives in config files.

    Added support for the proprietary directive eager_consume/0 to the config
    file of B-Prolog and corrected bugs that prevented using the proprietary
    tabling directives mode/1 and (:)/2 within objects and categories.

    Added support for the proprietary directive block/1 to the config files
    of SICStus Prolog.

    Corrected a bug in the SWI-Prolog config file that prevented using the
    proprietary directive index/1 within objects and categories.

    Added support for the proprietary directive initialization/2 to the config
    files of SWI-Prolog and YAP.

    Added support for the proprietary meta-predicates findall/4 and tfindall/3
    to the XSB config file.

    Updated the library object "term" with a (hopefully) faster implementation
    of the predicate ground/1, following advise by Lindsey Spratt on the GNU
    Prolog mailing list.

    Corrected a validation (but harmless) bug in the Logtalk syntax coloring 
    support for the jEdit text editor.


2.38.1 - December 21, 2009

    Added support for using the {}/1 compiler bypass Logtalk control construct
    to wrap closures that should be executed within the context of the pseudo-
    object "user" (e.g. calls to Prolog built-in predicates).

    Workaround module meta-predicate semantics in order to support calls to
    module meta-predicates specified in use_module/2 directives within objects
    and categories.

    Added support for compiling calls to module meta-predicates that are
    explicitly qualified (may require that the modules are loaded, depending
    on the back-end Prolog compiler).

    Code cleanup of meta-predicate directives compilation. Tighten checks of
    meta-predicate directives and meta-predicate directive arguments.

    Improved compilation of call/2-N goals.

    Improved performance of meta-calls that are compiled at runtime.
