@@ -11,7 +11,7 @@
 %
 %  configuration file for ECLiPSe 6.0#77 and later versions
 %
-%  last updated: January 28, 2010
+%  last updated: January 30, 2010
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -695,6 +695,9 @@ call(F, A1, A2, A3, A4, A5, A6, A7, A8) :-
 
 
 % '$lgt_rewrite_and_copy_pl_directive'(@callable, -callable)
+
+'$lgt_rewrite_and_copy_pl_directive'(demon(PIs), demon(CPIs)) :-
+	'$lgt_tr_predicate_indicators'(PIs, CPIs).
 
 '$lgt_rewrite_and_copy_pl_directive'(inline(PI1, PI2), inline(CPI1, CPI2)) :-
 	'$lgt_tr_predicate_indicators'(PI1, CPI1),
